--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mainuddinrussel73.github.io",
+  "homepage": "https://mainuddinrussel73.github.io/simple-book-shop",
   "name": "book-shop",
   "version": "0.1.0",
   "private": true,
